Fix table shift on disconnect

--- a/projects/js-packages/publicize-components/src/components/connection-management/style.module.scss
+++ b/projects/js-packages/publicize-components/src/components/connection-management/style.module.scss
@@ -60,3 +60,8 @@ table {
 tr:not(:last-child)>td {
 	border-bottom: solid 1px var(--jp-gray-5);
 }
+
+.actions {
+	display: flex;
+	justify-content: end;
+}
